namespace script
{
    public class AnimatorConstants {

        /*Person parameters*/
        public static readonly string MODEL_ANIMATOR_ISDEAD = "isDead";
        public static readonly string MODEL_ANIMATOR_ISATTACK = "isAttack";
        public static readonly string MODEL_ANIMATOR_ISCAST = "isCast";
        public static readonly string MODEL_ANIMATOR_ISHITTEN = "isHitten";
        public static readonly string MODEL_ANIMATOR_ISBLOCK = "isBlock";
        public static readonly string MODEL_ANIMATOR_ISMAGIC_SHIELD = "isMagicShield";
        public static readonly string MODEL_ANIMATOR_ISWINNING = "isWinning";

        public static readonly string MODEL_APPLY_ANIMATION = "apply";
    }
}
